[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Mapa1.gd" type="Script" id=1]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 8, 1, -1, 0, 0, 0, 0, 0, 0, 16, 1, -1, 0, 0, 0, 0, 0, 0, 24, 1, -1, 0, 0, 0, 0, 0, 0, 24, 1, -17, 0, 0, 0, 0, 0, 0, 48, 1, -17, 0, 0, 0, 0, 0, 0, 48, 1, -1, 0, 0, 0, 0, 0, 0, 64, 1, -1, 0, 0, 0, 0, 0, 0, 72, 1, -1 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="Mapa 1" type="Spatial"]
script = ExtResource( 1 )

[node name="Caminho" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
curve = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 37, 28, -7 )
fov = 75.5384

[node name="SpawnTime" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Rodada" type="Timer" parent="."]
wait_time = 20.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, 28.3, 5.9, 5.5 )

[connection signal="timeout" from="SpawnTime" to="." method="_on_SpawnTime_timeout"]
[connection signal="timeout" from="Rodada" to="." method="_on_Rodada_timeout"]
